<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#404040">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="135dp"
        android:layout_height="128dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgExibiProduto_Produto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/ic_launcher_foreground" />
    </FrameLayout>

    <TextView
        android:id="@+id/txtCarrinho_Nome"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:gravity="start|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/msg_loading_product"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ExibiProduto_TxtValor"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:gravity="start|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/msg_loading_value"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_quantidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/txtCarrinho_Nome" />

    <TextView
        android:id="@+id/txt_quantidade"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:gravity="start|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/msg_loading_quantidade"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Remover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toEndOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/ExibiProduto_TxtValor" />

    <Button
        android:id="@+id/ExibiProd_BtnAdicionar"
        style="@style/BtnAcao"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/btn_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ExibiProd_BtnEditar"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <Button
        android:id="@+id/ExibiProd_BtnEditar"
        style="@style/BtnAcao"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/btn_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/Remover"
        app:layout_constraintStart_toEndOf="@+id/ExibiProd_BtnAdicionar" />

    <Button
        android:id="@+id/Remover"
        style="@style/BtnAcao"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/btn_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ExibiProd_BtnEditar"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>