<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degrade"
    tools:context=".Activity_Sobre">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ExibiProd_ImgBtnHome"
            style="@style/LogoStyle"
            android:contentDescription="@string/logo_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ExibiProd_TxtPesquisa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:srcCompat="@drawable/dlmtech2_removebg_preview" />

        <EditText
            android:id="@+id/ExibiProd_TxtPesquisa"
            style="@style/EditTextPesquisa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ExibiProd_ImgBtnCarinho"
            app:layout_constraintStart_toEndOf="@+id/ExibiProd_ImgBtnHome"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill" />

        <ImageButton
            android:id="@+id/ExibiProd_ImgBtnCarinho"
            style="@style/BotaoIconeCarrinho"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/desc_cart_items"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ExibiProd_TxtPesquisa"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/title_sobre"
        android:textColor="#FF0000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:text="@string/texto_titulo_sobre1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="387dp"
        android:layout_height="164dp"
        android:layout_marginTop="8dp"
        android:paddingStart="5sp"
        android:text="@string/texto_sobre"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/texto_titulo_sobre2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="385dp"
        android:layout_height="105dp"
        android:layout_marginTop="8dp"
        android:paddingStart="5sp"
        android:text="@string/texto_sobre2"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#CC0000"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#CC0000"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnNavFuncionarios"
            style="@style/ImgBtnNavegacaoFuncionarios"
            android:layout_width="0dp"
            android:contentDescription="@string/desc_legend"
            android:rotationY="180"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnNavClientes"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnNavClientes"
            style="@style/ImgBtnNavegacaoClientes"
            android:layout_width="0dp"
            android:contentDescription="@string/desc_legend"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnNavFuncionarios"
            app:layout_constraintStart_toEndOf="@+id/btnNavHome"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnNavHome"
            style="@style/ImgBtnNavegacaoHome"
            android:layout_width="0dp"
            android:contentDescription="@string/desc_legend"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnNavClientes"
            app:layout_constraintStart_toEndOf="@+id/btnNavEstoque"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnNavEstoque"
            style="@style/ImgBtnNavegacaoEstoque"
            android:layout_width="0dp"
            android:contentDescription="@string/desc_shortcut_stock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnNavHome"
            app:layout_constraintStart_toEndOf="@+id/btnNavAnalise"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnNavAnalise"
            style="@style/ImgBtnNavegacaoAnalise"
            android:layout_width="0dp"
            android:contentDescription="@string/desc_shortcut_analysis"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnNavEstoque"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>