<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Carrinho"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degrade"
    tools:context=".Activity_Carrinho">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#000000"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ExibiProd_ImgBtnHome"
            style="@style/LogoStyle"
            android:contentDescription="@string/logo_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ExibiProd_TxtPesquisa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:srcCompat="@drawable/dlmtech2_removebg_preview" />

        <EditText
            android:id="@+id/ExibiProd_TxtPesquisa"
            style="@style/EditTextPesquisa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ExibiProd_ImgBtnCarinho"
            app:layout_constraintStart_toEndOf="@+id/ExibiProd_ImgBtnHome"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,MissingConstraints" />

        <ImageButton
            android:id="@+id/ExibiProd_ImgBtnCarinho"
            style="@style/BotaoIconeCarrinho"
            android:layout_marginTop="24dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/desc_cart_items"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ExibiProd_TxtPesquisa"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="3dp"
            android:background="#CC0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ExibiProd_ImgBtnHome" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/Activity_estoque"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily=""
        android:gravity="center"
        android:hint="@string/hint_your_message"
        android:paddingLeft="10dp"
        android:text="@string/title_carrinho"
        android:textColor="#EE3131"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


    <TextView
        android:id="@+id/lblCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_Cliente"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Activity_estoque" />

    <EditText
        android:id="@+id/edtCliente"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bordaredonda"
        app:layout_constraintEnd_toStartOf="@+id/edtFuncionario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCliente"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/lblFuncionario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="124dp"
        android:text="@string/label_Funcionario"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Activity_estoque" />

    <EditText
        android:id="@+id/edtFuncionario"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bordaredonda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtCliente"
        app:layout_constraintTop_toBottomOf="@+id/lblFuncionario"
        tools:ignore="Autofill" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCarrinho"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFuncionario" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bordacards"
        app:layout_constraintBottom_toTopOf="@+id/Carrinho_BtnSalvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/label_total_title"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/currency_symbol"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txtCarrinho_Total"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtCarrinho_Total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/placeholder_price"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/Carrinho_BtnSalvar"
        style="@style/BtnAcao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_save_caps"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancelar" />

    <Button
        android:id="@+id/btnCancelar"
        style="@style/BtnAcao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_cancel_caps"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toStartOf="@+id/Carrinho_BtnSalvar"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#CC0000"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnNavFuncionarios"
            style="@style/ImgBtnNavegacaoFuncionarios"
            android:layout_width="0dp"
            android:rotationY="180"
            android:contentDescription="@string/desc_legend"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnNavClientes"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnNavClientes"
            style="@style/ImgBtnNavegacaoClientes"
            android:layout_width="0dp"
            android:contentDescription="@string/desc_legend"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnNavFuncionarios"
            app:layout_constraintStart_toEndOf="@+id/btnNavHome"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnNavHome"
            style="@style/ImgBtnNavegacaoHome"
            android:layout_width="0dp"
            android:contentDescription="@string/desc_legend"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnNavClientes"
            app:layout_constraintStart_toEndOf="@+id/btnNavEstoque"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnNavEstoque"
            style="@style/ImgBtnNavegacaoEstoque"
            android:layout_width="0dp"
            android:contentDescription="@string/desc_shortcut_stock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnNavHome"
            app:layout_constraintStart_toEndOf="@+id/btnNavAnalise"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnNavAnalise"
            style="@style/ImgBtnNavegacaoAnalise"
            android:layout_width="0dp"
            android:contentDescription="@string/desc_shortcut_analysis"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnNavEstoque"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>